deltafiles are currently not compressed. This can be somewhat problematic for workloads that are heavy on updates – the deltafiles can be much larger than the underlying data in many cases, especially if the user has a dataset which is highly column-compressible. We should consider enabling LZ compression of deltafiles by default.